--- a/.github/workflows/tag-build.yml
+++ b/.github/workflows/tag-build.yml
@@ -37,8 +37,7 @@ jobs:
       - name: Prepare
         id: prep
         run: |
-          echo ::set-output name=created::$(date -u +'%Y-%m-%dT%H:%M:%SZ')
-
+          echo "{created}={$(date -u +'%Y-%m-%dT%H:%M:%SZ')}" >> $GITHUB_OUTPUT
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
